update codebase with openrewrite, enable virtual threads